Removed tracking of build folders